<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_estimate_line_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:hint="@string/length">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_estimate_line_length"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="56dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_estimate_line_width"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:hint="@string/width">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_estimate_line_width"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="56dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_estimate_line_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:hint="@string/height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_estimate_line_height"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="56dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>